:bug: Fixing a bug. Align front-page with new guide's style

--- a/res/code.css
+++ b/res/code.css
@@ -12,7 +12,7 @@ code {
     display: inline;
     padding: 0.25em 0.5em;
 }
-pre code {
+div:not(.example) > pre code {
     margin: 0 150px;
 }
 
